# apex-camera-models

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
doc/: COMPREHENSIVE_ANALYSIS.md
examples/: basic_projection.rs  batch_processing.rs  camera_model_converter.rs  camera_model_converter_apex.rs  compare_ds_optimizers.rs  compare_optimizers.rs  model_conversion.rs  parameter_validation.rs
samples/: eucm.yaml  fov.yaml
src/: lib.rs
src/camera/: double_sphere.rs  eucm.rs  fov.rs  kannala_brandt.rs  mod.rs  pinhole.rs  rad_tan.rs  ucm.rs
src/factors/: double_sphere_factor.rs  eucm_factor.rs  kannala_brandt_factor.rs  mod.rs  rad_tan_factor.rs  ucm_factor.rs
src/optimization/: double_sphere.rs  double_sphere_factor.rs  eucm.rs  eucm_factor.rs  kannala_brandt.rs  kannala_brandt_factor.rs  mod.rs  projection_ds_factor.rs  rad_tan.rs  rad_tan_factor.rs  ucm.rs  ucm_factor.rs
src/util/: error_metrics.rs  image_quality.rs  mod.rs  point_sampling.rs  reporting.rs  undistort.rs  validation.rs
tests/: model_conversions.rs  parameter_estimation.rs  projection_accuracy.rs  yaml_serialization.rs
