[package]
name = "apex-camera-models"
version = "0.4.1"
edition = "2021"
authors = ["Amin Abouee"]
description = "A comprehensive Rust library for fisheye and wide-angle camera models with tiny-solver-based optimization"
license = "MIT"
repository = "https://github.com/username/apex-camera-models"
homepage = "https://github.com/username/apex-camera-models"
documentation = "https://docs.rs/apex-camera-models"
keywords = ["camera", "fisheye", "computer-vision", "calibration", "optimization"]
categories = ["computer-vision", "science", "algorithms"]
readme = "README.md"
exclude = [
    "logs/*",
    "output/*",
    "target/*",
    ".github/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core dependencies
nalgebra = "0.33.2"
apex-solver = "0.1.5"
thiserror = "2.0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
yaml-rust = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Image processing
image = "0.25.2"
csv = "1.3.1"

# CLI
clap = { version = "4.5.38", features = ["derive"] }

[dev-dependencies]
# Testing dependencies
approx = "0.5.1"

# Example dependencies
flexi_logger = "0.30"

[[bin]]
name = "camera_converter"
path = "bin/camera_converter.rs"

[profile.release]
# Optimize for performance
opt-level = 3
lto = false          # Disabled for faster builds (was: true)
codegen-units = 16   # Parallel compilation (was: 1)
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[profile.test]
# Optimize tests for better performance
opt-level = 2

[[bin]]
name = "image_undistort"
path = "bin/image_undistort.rs"
